--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -1,5 +1,5 @@
-cas.server.name: https://cas.example.org:8443
-cas.server.prefix: https://cas.example.org:8443/cas
+cas.server.name: https://www.dmanis.cn:8443
+cas.server.prefix: https://www.dmanis.cn:8443/cas
 
 cas.adminPagesSecurity.ip=127\.0\.0\.1
 
